--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -39,7 +39,8 @@
         <div class="title">
           <h1>About Me</h1>
         </div>
-        <p>my name is aksioma tsalatsa yufuna. I am a student at the computer science faculty, informatics engineering study program. I study at Dian Nuswantoro University
+        <p>my name is aksioma tsalatsa yufuna. I am a student at the computer science faculty, informatics engineering study program. <br> 
+          I study at Dian Nuswantoro University <br> I have attended the btng training program which is training on computer learning from various divisions. I am following the web division training program. If you want to see my project, visit my project below.
         </p>
         
       </div>
